--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="images/__logo.svg" alt="Лого"/>
+            <img class="header__logo" src="images/__logo.png" alt="Лого"/>
             <div class="header__links">
             <a href="#" class="header__lang-link">Ru</a>
             <a href="#" class="header__lang-link">En</a>
@@ -19,7 +19,7 @@
     <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-        <img alt="Карта" src="images/__image.svg" class="lead__image">
+        <img alt="Карта" src="images/__image-2.png" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
