--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
-<section class="main">
+<main class="main">
     <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -34,11 +34,11 @@
             которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
             Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-            <li class="intro__list">Часовых поясов <span class="intro__list_normal">11</span></li>
-            <li class="intro__list">Объектов природного наследия ЮНЕСКО <span class="intro__list_normal">12</span></li>
-            <li class="intro__list">Объектов культурного наследия ЮНЕСКО <span class="intro__list_normal">16</span></li>
-            <li class="intro__list">Природных заповедников <span class="intro__list_normal">105</span></li>
-            <li class="intro__list">Аэропортов <span class="intro__list_normal">241</span></li> 
+            <li class="intro__list">Часовых поясов <span class="intro__span-accent">11</span></li>
+            <li class="intro__list">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+            <li class="intro__list">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+            <li class="intro__list">Природных заповедников <span class="intro__span-accent">105</span></li>
+            <li class="intro__list">Аэропортов <span class="intro__span-accent">241</span></li> 
         </ul>
     </section>
     
@@ -146,8 +146,9 @@
             iframes — путешествие от столицы до Байкала на электричках.</p>
     </a>
 </section>
-</section>
+</main>
 <footer class="footer">
+    <!-- <nav class="footer"> -->
     <ul class="footer__links">
     <li class="footer__link"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
     <li class="footer__link"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
@@ -156,7 +157,7 @@
     <li class="footer__link"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
     </ul>
     <p class="footer__copyrighting">© 2020. Бурштейн Дмитрий</p>
-    
+    <!-- </nav>       -->
 </footer>
 </div>
 </body>
